// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CdrHeadingSans > default configuration > renders correctly 1`] = `
<h2
  class="cdr-heading-sans"
  style="--cdr-heading-sans-font-size: var(--cdr-type-scale-3); --cdr-heading-sans-line-height: calc(var(--cdr-type-scale-3) * var(--cdr-heading-sans-line-height-ratio));"
>
  
  paragraph
  
</h2>
`;

exports[`CdrHeadingSans > passing a scale > renders correctly 1`] = `
<h2
  class="cdr-heading-sans"
  style="--cdr-heading-sans-font-size: var(--cdr-type-scale-1); --cdr-heading-sans-line-height: calc(var(--cdr-type-scale-1) * var(--cdr-heading-sans-line-height-ratio));"
>
  
  paragraph
  
</h2>
`;
